<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:scaleType="fitXY"
            android:src="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <ImageView
            android:id="@+id/poster"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_170sdp"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="@id/backdrop"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_20sdp"/>

        <TextView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/backdrop"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_20sdp"
            android:textColor="@color/black"
            android:id="@+id/tv_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            app:layout_constraintTop_toBottomOf="@id/poster"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/_20sdp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/overview"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_20sdp"
            android:textSize="12sp"
            android:id="@+id/tv_overview"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
