<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"/>

        <TextView
            android:id="@+id/moviesAja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tvshowAja"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="@font/porkys"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_20sdp"/>

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/shape_search"
            android:queryBackground="@null"
            android:queryHint="Cari"
            android:iconifiedByDefault="false"
            android:layout_margin="@dimen/_20sdp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"/>

    </LinearLayout>

    <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:id="@+id/rv_tvshows"/>

</LinearLayout>